--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
+
+<style>
+  .head {
+    font-size: 30px;
+  }
+
+</style>
+
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-
+<div class="head">Eligh Ros Personal Website</div>
 </body>
 </html>
