--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   .head {
     font-size: 30px;
   }
+  body {
+      background-color: #FBEEC1;
+  }
+  .pic {
+      width: 100%;
+      height: 500px;
+      background-image: url("assets/yosemite.jpg");
+      background-size: cover;
+  }
 
 </style>
 
@@ -11,6 +20,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
+<div class="pic"></div>
 <div class="head">Eligh Ros Personal Website</div>
 </body>
 </html>
