--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   body {
       background-color: #FBEEC1;
   }
-  .pic {
+  .banner {
       width: 100%;
-      height: 500px;
-      background-image: url("assets/yosemite.jpg");
-      background-size: cover;
+      height: 120px;
+      margin: 0;
+      color: #659DBD;
   }
 
 </style>
@@ -20,7 +20,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<div class="pic"></div>
+<div class="banner"></div>
 <div class="head">Eligh Ros Personal Website</div>
 </body>
 </html>
