--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   }
   body {
       background-color: #FBEEC1;
+      margin: 0;
   }
   .pic {
       width: 100%;
       height: 500px;
-      background-image: url("assets/yosemite.jpg");
+      background-image: url("assets/mountain-1.jpg");
       background-size: cover;
   }
 
