--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       margin: 0;
   }
   .pic {
-      width: 130%;
-      height: 600px;
-      background-image: url("assets/mountain-1.jpg");
+      position: relative;
+      height: 100%;
+      min-height: 550px;
+      background-image: url("assets/yosemite.jpg");
       background-size: cover;
+      background-repeat: no-repeat;
   }
 
 </style>
