--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   }
   .pic {
       position: relative;
-      height: 100%;
-      min-height: 550px;
-      background-image: url("assets/yosemite.jpg");
+      height: 100vh;
+      width: 100vh;
+      background-image: url("assets/smith-rock.jpg");
       background-size: cover;
       background-repeat: no-repeat;
   }
