--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   .pic {
       position: relative;
       height: 100vh;
-      width: 100vh;
+      width: 100vw;
       background-image: url("assets/smith-rock.jpg");
       background-size: cover;
       background-repeat: no-repeat;
+      filter: blur(8px);
+      -webkit-filter: blur(8px);
   }
 
 </style>
