--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       background-image: url("assets/smith-rock.jpg");
       background-size: cover;
       background-repeat: no-repeat;
-      filter: blur(8px);
-      -webkit-filter: blur(8px);
+      filter: blur(2px);
+      -webkit-filter: blur(2px);
+      overflow: hidden;
   }
 
 </style>
