--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       position: relative;
       height: 100vh;
       width: 100vw;
+      max-width: 100%;
+      max-height: 100%;
       background-image: url("assets/smith-rock.jpg");
       background-size: cover;
       background-repeat: no-repeat;
