--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
       background-image: url("assets/smith-rock.jpg");
       background-size: cover;
       background-repeat: no-repeat;
-      filter: blur(2px);
-      -webkit-filter: blur(2px);
       overflow: hidden;
-      transform: scale(1.1)
+  }
+  .blur {
+      position: relative;
+      height: 100vh;
+      width: 100vw;
+      max-width: 100%;
+      max-height: 100%;
+      backdrop-filter: blur(2px);
   }
 
 </style>
