--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<div class="pic"></div>
+<div class="pic"><div class="blur"></div></div>
 <div class="head">Eligh Ros Personal Website</div>
 </body>
 </html>
