--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       max-width: 100%;
       max-height: 100%;
       backdrop-filter: blur(2px);
+      background: #000000;
+      opacity: 18%;
   }
-
 </style>
 
 
