--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       max-width: 100%;
       max-height: 100%;
       backdrop-filter: blur(2px);
+  }
+  .darken {
+      position: relative;
+      height: 100vh;
+      width: 100vw;
+      max-width: 100%;
+      max-height: 100%;
       background: #000000;
       opacity: 18%;
   }
