--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       max-width: 100%;
       max-height: 100%;
       background: #000000;
-      opacity: 30%;
+      opacity: 22%;
   }
 </style>
 
@@ -45,7 +45,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<div class="pic"><div class="blur"></div></div>
+<div class="pic"><div class="blur"><div class="darken"></div></div></div>
 <div class="head">Eligh Ros Personal Website</div>
 </body>
 </html>
