added rel classes block but didn't add info yet

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
     header {
         top: 0;
-        height: 75px;
+        height: 8vh;
         width: 100%;
         position: sticky;
         transition: all 0.5s;
@@ -139,8 +139,8 @@
         text-align: center;
         width: 30vw;
         left: 35vw;
-        margin-top: 2vh;
-        margin-bottom: 5vh;
+        margin-top: 1vh;
+        margin-bottom: 2vh;
         font-weight: 600;
     }
     .education-flex {
@@ -208,6 +208,14 @@
         font-family: "Century Gothic", serif;
         margin-top: 3.5vh;
     }
+    .relevant-classes {
+        position: relative;
+        height: 25vh;
+        width: 70vw;
+        margin-left: 15vw;
+        margin-top: 5vh;
+        box-shadow: 0 4px 10px 6px rgba(0, 0, 0, .2);
+    }
 </style>
 
 <meta charset="UTF-8">
@@ -218,10 +226,10 @@
         <div class="navbar-title" id="navbar-title">Eligh Ros</div>
         <ul class="navbar-links">
             <li><a onclick="window.scrollTo({top: window.screenTop, left: 0, behavior: 'smooth',});">Home</a></li>
-            <li><a onclick="window.scrollTo({top: .9 * window.innerHeight, left: 0, behavior: 'smooth',});">Education</a></li>
-            <li><a onclick="window.scrollTo({top: 2 * (.9 * window.innerHeight), left: 0, behavior: 'smooth',});">Work Experience</a></li>
-            <li><a onclick="window.scrollTo({top: 3 * (.9 * window.innerHeight), left: 0, behavior: 'smooth',});">Projects</a></li>
-            <li><a onclick="window.scrollTo({top: 4 * (.9 * window.innerHeight), left: 0, behavior: 'smooth',});">Contact Me</a></li>
+            <li><a onclick="window.scrollTo({top: .92 * window.innerHeight, left: 0, behavior: 'smooth',});">Education</a></li>
+            <li><a onclick="window.scrollTo({top: 2 * (.91 * window.innerHeight), left: 0, behavior: 'smooth',});">Work Experience</a></li>
+            <li><a onclick="window.scrollTo({top: 3 * (.914 * window.innerHeight), left: 0, behavior: 'smooth',});">Projects</a></li>
+            <li><a onclick="window.scrollTo({top: 4 * (.9158* window.innerHeight), left: 0, behavior: 'smooth',});">Contact Me</a></li>
         </ul>
     </header>
     <div class="pic">
@@ -237,7 +245,7 @@
         Arizona. I specialize in creating efficient algorithms and building robust software solutions.
         <br><br>
         Feel free to explore my portfolio and get in touch to discuss collaboration opportunities!</div>
-    <div style="height: 90vh"></div>
+    <div style="height: 92vh"></div>
     <div class="education-section">
         <p class="education-head">Education Overview</p>
         <div class="education-flex">
@@ -277,10 +285,13 @@
                 </div>
             </div>
         </div>
+        <div class="relevant-classes">
+
+        </div>
     </div>
-    <div style="height: 90vh" class="head">Eligh Ros Personal Website</div>
-    <div style="height: 90vh" class="head">Eligh Ros Personal Website</div>
-    <div style="height: 90vh" class="head">Eligh Ros Personal Website</div>
+    <div style="height: 93vh" class="head">Eligh Ros Personal Website</div>
+    <div style="height: 93vh" class="head">Eligh Ros Personal Website</div>
+    <div style="height: 93vh" class="head">Eligh Ros Personal Website</div>
     <div style="height: 30vh" class="head">Footer</div>
 </body>
 
@@ -313,5 +324,3 @@
           }
     }
 </script>
-
-</html>
