--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     .relevant-classes-body {
         position: relative;
         font-size: 2vh;
-        width: 66vw;
+        width: inherit;
         font-family: "Century Gothic", serif;
         text-align: center;
         overflow-y: auto;
