--- a/index.html
+++ b/index.html
@@ -198,11 +198,13 @@
     .nda_logo {
         position: relative;
         left: 1vw;
+        max-height: 12vh;
         max-width: 20vw;
     }
     .ab_tech_logo {
         position: relative;
         left: 1vw;
+        max-height: 12vh;
         max-width: 20vw;
     }
     .highschool-text {
@@ -212,6 +214,7 @@
     .rit_logo {
         position: relative;
         left: 1vw;
+        max-height: 12vh;
         max-width: 20vw;
         margin-top: 7vh;
         margin-bottom: auto;
